--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -19,6 +19,8 @@ li {
 
 h2.heading-primary {
   font-family: "Cormorant Garamond", serif;
+  margin-top: 50px;
+  margin-bottom: 1px;
   font-size: 36px;
   line-height: 1;
   display: inline-block;
