--- a/my-portfolio/src/styles/title.module.css
+++ b/my-portfolio/src/styles/title.module.css
@@ -1,3 +1,8 @@
+.title_container {
+  margin-top: 200px;
+  margin-bottom: 200px;
+}
+
 .head-div {
   margin-top: 200px;
   align-items: center;
@@ -18,6 +23,8 @@
 .title {
   font-family: "Cormorant Garamond", serif;
   font-size: 88px;
+  margin-top: 10px;
+  margin-bottom: 30px;
   font-weight: normal;
   line-height: 1;
   display: block;
